tests/macros/tests/ui/err/has-expr-argument.stderr
error: expected identifier, found keyword `true`
 --> tests/ui/err/has-expr-argument.rs:3:9
  |
3 | #[trace(true)]
  |         ^^^^
